NewCompendium/src/main/webapp/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');

html {
	scroll-behavior: auto !important;
}

html, body {
	margin: 0;
	padding: 0;
	height: 100%;
	width: 100%;
	font-size: 0.625vw;
	overflow: hidden;
}

@media only screen and (orientation:portrait) {
	body {
		height: 100vw;
		transform: rotate(90deg);
	}
}

#body-container {
	margin: 0;
	padding: 0;
	height: 100%;
}

.box {
	position: relative;
	width: 100%;
}

.box:before {
	content: "";
	float: left;
	padding-top: 100%;
}

.content {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	line-height: 100%;
	height: 100%;
/* 	text-align: center; */
	display: flex;
	align-items: center;
	justify-content: center;
}

button:focus {
	outline:0;
}

.row {
	margin: 0;
	padding: 0;
	width: 100%;
}

.row>* {
	margin: 0;
	padding: 0;
}

.start-components {
	align-items: flex-start;
	justify-content: flex-start;
}

.center-components {
	align-items: center;
	justify-content: center;
	width: 100%; /* height: auto; */
}

.full-height {
	height: 100%;
}

.text-style {
	color: #fff;
	font-family: 'Lato', sans-serif;
	font-size: 1.5rem;
}

.link-text-style {
	color: #fff;
}

#sidebar-container {
	display: inline-block;
	margin: 0;
	padding: 0;
	height: 100%;
	width: 4.749755859375%;
}

#sidebar-top {
	height: 30%;
}

#sidebar-mid-container {
	/* display: inline-block; */
	height: 40%;
	width: 100%;
	vertical-align: middle;
}

#mid-center {
	margin-top: auto;
	margin-bottom: auto;
}

#sidebar-bot {
	height: 30%;
}

#sidebar-collapse-btn-container {
	width: 100%;
	padding-top: 2.2rem;
}

#sidebar-btn-box {
	height: 3.418984375rem;
	width: 3.418984rem;
}

#sidebar-dn-btn-container {
	width: 100%;
	margin-top: 2.35rem;
}


#sidebar-btn-box:hover {
	cursor: pointer;
}

/* #sidebar-btn-box:hover #sidebar-collapse-btn .collapse-btn { */
/* 	transform: translate(-18px, 0); */
/* 	width: 45px; */
/* 	transition: transform .4s, width .4s .4s; */
/* } */

.collapse-btn {
	transition: width .4s, transform .4s .4s;
}

.collapse-btn-expanded {
	transform: translate(-18px, 0);
	width: 45px;
	transition: transform .4s, width .4s .4s;
}

#daynight-icon {
	width: 2.25rem;
	height: 2.25rem;
	background-color: transparent;
	transition: border .8s, box-shadow .8s;
}

#daynight-icon:hover {
	cursor: pointer;
}

.moon {
	box-shadow: inset 0.90rem 0rem 0 0.234375rem #fff;
	border-radius: 50%;
}

.sun {
	border-radius: 50%;
	box-shadow: inset 0.546875rem -0.390625rem 0 1.25rem #fff;
}


.mid-container {
	height: 3.515625rem;
	width: 30.0rem;
	/* background-color: #bbb; */
	/* margin: 17.5% 0 17.5% 0; */
	/*z-index: -2;*/
}

#mid-bar {
	height: 22rem;
	width: 0.375rem;
	background-color: #fff;
	position: absolute;
	z-index: 0;
	left: 3.6123046875rem;
	margin: 2rem 0 2rem 0;
	/* transform: translate(0, 50%); */ /* padding-top: 2rem; */
}

.diamond-center {
	height: 100%;
	width: 7.599609375rem;
	align-items: center;
	justify-content: center;
	/* padding-top: 25%; */ /* z-index: 0; */
	/* margin-bottom: 50%; */ /* margin: 50% 0 50% 0; */
	display: inline-block;
	text-align: center; /* margin: 0 50% 0 50%; */
	/*z-index: -1;*/
}

.diamond {
	background-color: #fff;
	width: 3.515625rem;
	height: 3.515625rem;
	transition: transform .5s;
	margin: 0 auto 0 auto;
	transform: rotate(45deg) scale(0.35);
}

.diamond:hover {
	cursor: pointer;
}

.diamond-expand {
	width: 25rem;
}

.diamond-collapse {
	width: 8.0rem;
}

.diamond-selected {
	transform: rotate(45deg) scale(0.5);
}
/*
.diamond-selected:hover {
	transform: rotate(45deg) scale(0.35);
}
*/
.diamond-unselected {
	transform: rotate(45deg) scale(0.35);
}

.diamond-unselected:hover {
	transform: rotate(45deg) scale(0.5);
}

.bar-center { /* height: 100%; */
	width: 8.0rem;
	align-items: center;
	justify-content: center;
	margin: auto 0 auto 0;
}

.mid-label {
	height: 2.5rem;
	position: absolute;
	font-family: 'Lato', sans-serif;
	font-size: 1.8rem;
	line-height: 2.5rem;
	color: #fff;
	font-weight: bold;
	width: 16rem;
}

.mid-label:hover {
	cursor: pointer;
}

.colourable {
	transition: background-color .8s;
}

.home-lm-style {
	color: #fff;
	background-color: #a0ebb9;
	fill: #a0ebb9;
}

.project-lm-style {
	color: #fff;
	background-color: #7fcdff;
	fill: #ccebff;
}

.about-lm-style {
	color: #fff;
	background-color: #f56f6f;
	fill: #f56f6f;
}

.comp-lm-style {
	color: #fff;
	background-color: #ffd162;
	fill: #ffd162;
}

.bg-lm-style {
	background-color: #fff;
}

.home-dm-style {
	color: #fff;
	background-color: #43644d;
	fill: #43644d;
}

.project-dm-style {
	color: #fff;
	background-color: #0c486e;
    fill: #21323d;
}

.about-dm-style {
	color: #fff;
	background-color: #b13743;
	fill: #b13743;
}

.comp-dm-style {
	color: #fff;
	background-color: #de5f00;
	fill: #de5f00;
}

.bg-dm-style {
	background-color: #202020;
}

.mid-label-container {
	width: 0rem;
	height: 100%;
	display: inline-block;
	margin-left: -2.0rem;
	padding: 0.5rem 0;
	position: relative;
	overflow: hidden;
	transition: width .8s;
	z-index: 10;
}

.mid-label-expand {
	width: 18.25rem;
}

.mid-label-collapse {
	width: 0rem;
}

.label-pad {
	padding-left: 1.0rem;
	letter-spacing: .05rem;
}

.triangle {
	/* position: absolute; */
	margin-left: 16rem;
	transition: border .8s;
}

.triangle-collapse {

}

.triangle-lm-home {
	border-left: 1.25rem solid #a0ebb9;
}

.triangle-lm-project {
	border-left: 1.25rem solid #7fcdff;
}

.triangle-lm-about {
	border-left: 1.25rem solid #f56f6f;
}

.triangle-lm-comp {
	border-left: 1.25rem solid #ffd162;
}

.triangle-dm-home {
	border-left: 1.25rem solid #43644d;
}

.triangle-dm-project {
	border-left: 1.25rem solid #0c486e;
}

.triangle-dm-about {
	border-left: 1.25rem solid #b13743;
}

.triangle-dm-comp {
	border-left: 1.25rem solid #de5f00;
}

.mid-label-triangle {
	width: 0;
	height: 0;
	border-top: 1.25rem solid transparent;
	border-bottom: 1.25rem solid transparent;
	border-right: 1.25rem solid transparent;
	background-color: transparent;
	/*z-index: -1;*/
	position: relative;
}
/* ... */

